--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,6 +8,10 @@ authors: [Akoot_]
 description: Extra commands and features for UltraVanilla
 website: https://akoot.net/plugins/extravanilla
 commands:
+  afk:
+    description: Toggle and check if a player is AFK
+    permission: extravanilla.command.afk
+    usage: /afk [player]
   extravanilla:
     aliases: [ev]
     description: Base ExtraVanilla command
