--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,14 @@
+description:
+  server-name: "&6&lUltra&r&fVanilla"
+  version-color: WHITE
+  motds:
+    - "Test"
+    - "Test 2"
+    - "Test 3"
+    - "Test 4"
 chat:
   format: "&7[%t&7] &7<&r&{name-color}%p&7> &r&{chat-color}%m"
 defaults:
   default-title:
     id: default
-    name: Guest
+    name: "Guest"
