Ported to the new version of UltraVanilla, scrapped Channels

--- a/src/main/resources/strings.yml
+++ b/src/main/resources/strings.yml
@@ -1,4 +1,9 @@
 command:
+  info:
+    message:
+      info:
+        title: "---------- @p's &:info ----------"
+        item: "%v\n"
   spawn:
     message:
       teleport:
